--- a/package.json
+++ b/package.json
@@ -30,40 +30,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.0.6",
-    "@angular/cdk": "~17.3.0",
-    "@angular/common": "~17.0.6",
-    "@angular/compiler": "~17.0.6",
-    "@angular/core": "~17.0.6",
-    "@angular/forms": "~17.0.6",
-    "@angular/platform-browser": "~17.0.6",
-    "@angular/platform-browser-dynamic": "~17.0.6",
-    "@angular/router": "~17.0.6",
-    "eslint-plugin-jsdoc": "^46.9.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "@angular/animations": "18.2.6",
+    "@angular/cdk": "18.2.6",
+    "@angular/common": "18.2.6",
+    "@angular/compiler": "18.2.6",
+    "@angular/core": "18.2.6",
+    "@angular/forms": "18.2.6",
+    "@angular/platform-browser": "18.2.6",
+    "@angular/platform-browser-dynamic": "18.2.6",
+    "@angular/router": "18.2.6",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.6",
-    "@angular-eslint/builder": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/schematics": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "^17.0.6",
-    "@angular/compiler-cli": "^17.0.6",
-    "@angular/language-service": "^17.0.6",
+    "@angular-devkit/build-angular": "18.2.6",
+    "@angular-eslint/builder": "18.3.1",
+    "@angular-eslint/eslint-plugin": "18.3.1",
+    "@angular-eslint/eslint-plugin-template": "18.3.1",
+    "@angular-eslint/schematics": "18.3.1",
+    "@angular-eslint/template-parser": "18.3.1",
+    "@angular/cli": "18.2.6",
+    "@angular/compiler-cli": "18.2.6",
+    "@angular/language-service": "18.2.6",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "angular-cli-ghpages": "^0.6.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.2",
-    "eslint": "^8.53.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-jsdoc": "48.0.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine": "^3.5.0",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
@@ -72,13 +72,13 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^17.0.2",
+    "ng-packagr": "^18.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
     "protractor": "~7.0.0",
     "sass": "^1.77.6",
     "scss-bundle": "^3.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.2.2"
+    "typescript": "~5.5.4"
   }
 }
