ci: setup playwright
Added support for playwright e2e tests.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ coverage/
 yarn.lock
 /.vscode
 *.tgz
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/results/
+.env
