--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 * text=auto
 docs/* linguist-documentation
 release/* linguist-vendored
+playwright/snapshots/e2e/**/*.png filter=lfs diff=lfs merge=lfs -text
