--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           node-version: lts/iron
 
+      - name: Pull Repository with LFS
+        run: git lfs pull
+
       - name: Install
         uses: bahmutov/npm-install@v1
 
@@ -38,6 +41,18 @@ jobs:
       - name: Test
         run: |
           npm run ci --if-present
+        env:
+          CI: true
+
+      - name: E2E Prepare
+        run: |
+          npm run e2e:prepare --if-present
+        env:
+          CI: true
+
+      - name: E2E
+        run: |
+          npm run e2e --if-present
         env:
           CI: true
 
