--- a/package.json
+++ b/package.json
@@ -48,25 +48,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "18.2.6",
-    "@angular-eslint/builder": "18.3.1",
-    "@angular-eslint/eslint-plugin": "18.3.1",
-    "@angular-eslint/eslint-plugin-template": "18.3.1",
-    "@angular-eslint/schematics": "18.3.1",
-    "@angular-eslint/template-parser": "18.3.1",
     "@angular/cli": "18.2.6",
     "@angular/compiler-cli": "18.2.6",
     "@angular/language-service": "18.2.6",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
     "angular-cli-ghpages": "^0.6.0",
+    "angular-eslint": "18.4.3",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.2",
-    "eslint": "^9.8.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-jsdoc": "48.0.2",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
     "http-server": "^13.0.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "~3.10.1",
@@ -82,7 +75,8 @@
     "sass": "^1.77.6",
     "scss-bundle": "^3.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "~5.5.4"
+    "typescript": "~5.5.4",
+    "typescript-eslint": "8.16.0"
   },
   "optionalDependencies": {
     "@axe-core/playwright": "4.8.2",
