refactor: enable `strictFunctionTypes` (#165)
The overall goal is to enable TypeScript strict mode.
To achieve this, we need to enable each subset first.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@siemens/ngx-datatable": ["dist/ngx-datatable"],
       "@siemens/ngx-datatable/*": ["dist/ngx-datatable/*"]
     },
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "strictFunctionTypes": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
