chore(karme): correct broken code-coverage setup

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "run-p lint test:unit",
     "test:unit": "ng test ngx-datatable-lib --watch=false",
     "test:watch": "ng test ngx-datatable-lib",
-    "test:ci": "ng test ngx-datatable-lib --watch=false --progress=false --browsers=ChromeHeadlessCI",
+    "test:ci": "ng test ngx-datatable-lib --watch=false --progress=false --browsers=ChromeHeadlessCI --code-coverage",
     "ci": "run-s lint test:ci",
     "lint": "ng lint",
     "e2e:prepare": "playwright install",
@@ -66,6 +66,7 @@
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.2.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
