build: enable noImplicitAny in tsconfig (#185)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@siemens/ngx-datatable/*": ["dist/ngx-datatable/*"]
     },
     "useDefineForClassFields": false,
-    "strictFunctionTypes": true
+    "strictFunctionTypes": true,
+    "noImplicitAny": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
