Refactor/enable strict null checks (#247)
* refactor: improve typing related to null checks

* docs: improve typing related to null checks

* test: improve typing related to null checks

* build: enable strict null checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     },
     "useDefineForClassFields": false,
     "strictFunctionTypes": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "strictNullChecks": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
