Refactor/enable strict init checks (#250)
* refactor: improve typing related to strict property init checks

* docs: improve typing related to strict property init checks

* test: improve typing related to strict property init checks

* build: enable strict mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,7 @@
       "@siemens/ngx-datatable/*": ["dist/ngx-datatable/*"]
     },
     "useDefineForClassFields": false,
-    "strictFunctionTypes": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true
+    "strict": true
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
