--- a/projects/ngx-datatable/package.json
+++ b/projects/ngx-datatable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siemens/ngx-datatable",
-  "version": "23.0.0-rc.2",
+  "version": "23.0.0",
   "description": "ngx-datatable is an Angular table grid component for presenting large and complex data.",
   "peerDependencies": {
     "@angular/common": ">=19.0.0",
