--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@angular/cli": "19.2.5",
     "@angular/compiler-cli": "19.2.4",
     "@angular/language-service": "19.2.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^20.10.4",
@@ -75,6 +77,7 @@
     "prettier": "^3.3.3",
     "sass": "^1.77.6",
     "scss-bundle": "^3.1.1",
+    "semantic-release": "^24.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.4",
     "typescript-eslint": "8.16.0"
