build: use semantic-release instead of manual release flow

--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -1,6 +1,10 @@
 name: Build, Test, and Deploy
 
 on:
+  workflow_call:
+    secrets:
+      CC_TEST_REPORTER_ID:
+        required: true
   pull_request:
   push:
     branches:
