--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "esModuleInterop": true,
     "noUnusedLocals": true,
     "paths": {
-      "@siemens/ngx-datatable": ["dist/ngx-datatable"],
-      "@siemens/ngx-datatable/*": ["dist/ngx-datatable/*"]
+      "@spike-rabbit/ngx-datatable": ["dist/ngx-datatable"],
+      "@spike-rabbit/ngx-datatable/*": ["dist/ngx-datatable/*"]
     },
     "useDefineForClassFields": false,
     "strict": true
