--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Archive build
         uses: actions/upload-artifact@v4
         with:
-          name: build
-          path: dist/ngx-datatable
+          name: dist
+          path: dist
 
       - name: Test
         run: npm run ci
@@ -81,8 +81,8 @@ jobs:
       - name: Download build
         uses: actions/download-artifact@v4
         with:
-          name: build
-          path: dist/ngx-datatable
+          name: dist
+          path: dist
 
       - name: Install
         run: npm ci
