fix: publish pulib

--- a/projects/ngx-datatable/package.json
+++ b/projects/ngx-datatable/package.json
@@ -2,6 +2,9 @@
   "name": "@spike-rabbit/ngx-datatable",
   "version": "1.0.0",
   "description": "ngx-datatable is an Angular table grid component for presenting large and complex data.",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": ">=19.0.0",
     "@angular/core": ">=19.0.0",
