--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "ng serve",
     "start:prod": "http-server dist/ngx-datatable-examples -s -p 4200 -a 127.0.0.1",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "build:lib:prod": "ng build ngx-datatable-lib --configuration production",
@@ -28,9 +29,6 @@
     "e2e:prepare": "playwright install",
     "e2e": "playwright test",
     "e2e:update": "yarn e2e --update-snapshots",
-    "build-docs": "cross-env NODE_ENV=production ng build --configuration production --base-href=\"/ngx-datatable/\"",
-    "predeploy-docs": "npm run build-docs",
-    "deploy-docs": "angular-cli-ghpages --dir ./dist/ngx-datatable-examples",
     "package": "run-s build:lib:prod copy-files build:css",
     "prepublish:lib": "run-s ci package",
     "publish:lib": "npm publish ./dist/ngx-datatable",
@@ -69,7 +67,6 @@
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^20.10.4",
-    "angular-cli-ghpages": "^0.6.0",
     "angular-eslint": "19.3.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.2",
