--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format:check": "prettier --check .",
     "build:lib:prod": "ng build ngx-datatable-lib --configuration production",
     "copy-files": "cp README.md dist/ngx-datatable/README.md && cp LICENSE dist/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/ngx-datatable/assets\" && cpx \"projects/ngx-datatable/src/lib/themes/**/*\" \"dist/ngx-datatable/themes\"",
-    "build:css": "scss-bundle  -c ./scss-bundle.config.json && sass --no-source-map dist/ngx-datatable/themes && sass --no-source-map dist/ngx-datatable",
+    "build:css": "sass --no-source-map dist/ngx-datatable/themes && sass --no-source-map dist/ngx-datatable",
     "test": "run-p lint:commit lint:scss lint test:unit",
     "test:unit": "ng test ngx-datatable-lib --watch=false",
     "test:watch": "ng test ngx-datatable-lib",
@@ -93,7 +93,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "sass": "^1.77.6",
-    "scss-bundle": "^3.1.1",
     "semantic-release": "^24.2.5",
     "stylelint": "16.19.0",
     "stylelint-scss": "6.11.1",
