--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "ngx-datatable",
   "version": "0.0.0",
+  "commitlint": {
+    "extends": [
+      "@siemens/commitlint-config/.commitlintrc.js"
+    ]
+  },
+  "prettier": "@siemens/prettier-config",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,12 +17,14 @@
     "build:lib:prod": "ng build ngx-datatable-lib --configuration production",
     "copy-files": "cp README.md dist/ngx-datatable/README.md && cp LICENSE dist/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/ngx-datatable/assets\" && cpx \"projects/ngx-datatable/src/lib/themes/**/*\" \"dist/ngx-datatable/themes\"",
     "build:css": "scss-bundle  -c ./scss-bundle.config.json && sass --no-source-map dist/ngx-datatable/themes && sass --no-source-map dist/ngx-datatable",
-    "test": "run-p lint test:unit",
+    "test": "run-p lint:commit lint test:unit",
     "test:unit": "ng test ngx-datatable-lib --watch=false",
     "test:watch": "ng test ngx-datatable-lib",
     "test:ci": "ng test ngx-datatable-lib --watch=false --progress=false --browsers=ChromeHeadlessCI --code-coverage",
     "ci": "run-s lint test:ci",
     "lint": "ng lint",
+    "lint:commit": "commitlint --from=origin/main",
+    "lint:scss": "stylelint **.scss",
     "e2e:prepare": "playwright install",
     "e2e": "playwright test",
     "e2e:update": "yarn e2e --update-snapshots",
@@ -53,15 +61,24 @@
     "@angular/language-service": "19.2.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@siemens/commitlint-config": "^2.2.0",
+    "@siemens/eslint-config-angular": "^2.2.0",
+    "@siemens/eslint-plugin-defaultvalue": "^2.2.0",
+    "@siemens/prettier-config": "^2.2.0",
+    "@siemens/stylelint-config-scss": "^2.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^20.10.4",
     "angular-cli-ghpages": "^0.6.0",
-    "angular-eslint": "18.4.3",
+    "angular-eslint": "19.3.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.2",
     "eslint": "^9.15.0",
     "eslint-plugin-jsdoc": "48.0.2",
+    "eslint-plugin-headers": "1.2.1",
+    "eslint-plugin-perfectionist": "4.12.2",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-tsdoc": "0.4.0",
     "http-server": "^13.0.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "~3.10.1",
@@ -74,10 +91,13 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^19.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "sass": "^1.77.6",
     "scss-bundle": "^3.1.1",
     "semantic-release": "^24.2.5",
+    "stylelint": "16.19.0",
+    "stylelint-scss": "6.11.1",
+    "stylelint-use-logical-spec": "5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.4",
     "typescript-eslint": "8.16.0"
