--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:lib:prod": "ng build ngx-datatable-lib --configuration production",
     "copy-files": "cp README.md dist/ngx-datatable/README.md && cp LICENSE dist/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/ngx-datatable/assets\" && cpx \"projects/ngx-datatable/src/lib/themes/**/*\" \"dist/ngx-datatable/themes\"",
     "build:css": "scss-bundle  -c ./scss-bundle.config.json && sass --no-source-map dist/ngx-datatable/themes && sass --no-source-map dist/ngx-datatable",
-    "test": "run-p lint:commit lint test:unit",
+    "test": "run-p lint:commit lint:scss lint test:unit",
     "test:unit": "ng test ngx-datatable-lib --watch=false",
     "test:watch": "ng test ngx-datatable-lib",
     "test:ci": "ng test ngx-datatable-lib --watch=false --progress=false --browsers=ChromeHeadlessCI --code-coverage",
