--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@angular/platform-browser": "19.2.4",
     "@angular/platform-browser-dynamic": "19.2.4",
     "@angular/router": "19.2.4",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.2.5",
@@ -59,25 +59,25 @@
     "@angular/language-service": "19.2.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@siemens/commitlint-config": "^2.2.0",
-    "@siemens/eslint-config-angular": "^2.2.0",
-    "@siemens/eslint-plugin-defaultvalue": "^2.2.0",
-    "@siemens/prettier-config": "^2.2.0",
-    "@siemens/stylelint-config-scss": "^2.2.0",
+    "@siemens/commitlint-config": "^2.2.1",
+    "@siemens/eslint-config-angular": "^2.2.1",
+    "@siemens/eslint-plugin-defaultvalue": "^2.2.1",
+    "@siemens/prettier-config": "^2.2.1",
+    "@siemens/stylelint-config-scss": "^2.2.1",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "^2.0.13",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.19.4",
     "angular-eslint": "19.3.0",
     "cpx": "^1.5.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^9.15.0",
-    "eslint-plugin-jsdoc": "48.0.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.30.1",
     "eslint-plugin-headers": "1.2.1",
+    "eslint-plugin-jsdoc": "48.0.2",
     "eslint-plugin-perfectionist": "4.12.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-tsdoc": "0.4.0",
-    "http-server": "^13.0.0",
-    "jasmine": "^3.5.0",
+    "http-server": "^13.1.0",
+    "jasmine": "^3.99.0",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.4",
@@ -85,12 +85,12 @@
     "karma-coverage": "^2.2.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^19.2.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "ng-packagr": "^19.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
-    "sass": "^1.77.6",
-    "semantic-release": "^24.2.5",
+    "sass": "^1.89.2",
+    "semantic-release": "^24.2.6",
     "stylelint": "16.19.0",
     "stylelint-scss": "6.11.1",
     "stylelint-use-logical-spec": "5.0.1",
