build: align setup with other projects

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "build:lib:prod": "ng build ngx-datatable-lib --configuration production",
-    "copy-files": "cp README.md dist/ngx-datatable/README.md && cp LICENSE dist/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/ngx-datatable/assets\" && cpx \"projects/ngx-datatable/src/lib/themes/**/*\" \"dist/ngx-datatable/themes\"",
+    "copy-files": "cpy \"{LICENSE,README.md}\" dist/ngx-datatable/ && cpy \"src/assets/**/*\" \"dist/ngx-datatable/assets\"",
     "build:css": "sass --no-source-map dist/ngx-datatable/themes && sass --no-source-map dist/ngx-datatable",
     "test": "npm run lint:commit && npm run lint:scss && npm run lint && npm run test:unit",
     "test:unit": "ng test ngx-datatable-lib --watch=false",
@@ -62,7 +62,7 @@
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^22.0.0",
     "angular-eslint": "19.3.0",
-    "cpx": "^1.5.0",
+    "cpy-cli": "^5.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.30.1",
     "eslint-plugin-headers": "1.2.1",
