--- a/package.json
+++ b/package.json
@@ -18,24 +18,18 @@
     "build:lib:prod": "ng build ngx-datatable-lib --configuration production",
     "copy-files": "cp README.md dist/ngx-datatable/README.md && cp LICENSE dist/ngx-datatable/LICENSE && cpx \"src/assets/**/*\" \"dist/ngx-datatable/assets\" && cpx \"projects/ngx-datatable/src/lib/themes/**/*\" \"dist/ngx-datatable/themes\"",
     "build:css": "sass --no-source-map dist/ngx-datatable/themes && sass --no-source-map dist/ngx-datatable",
-    "test": "run-p lint:commit lint:scss lint test:unit",
+    "test": "npm run lint:commit && npm run lint:scss && npm run lint && npm run test:unit",
     "test:unit": "ng test ngx-datatable-lib --watch=false",
     "test:watch": "ng test ngx-datatable-lib",
     "test:ci": "ng test ngx-datatable-lib --watch=false --progress=false --browsers=ChromeHeadlessCI --code-coverage",
-    "ci": "run-s lint test:ci",
+    "ci": "npm run lint && npm run test:ci",
     "lint": "ng lint",
     "lint:commit": "commitlint --from=origin/main",
     "lint:scss": "stylelint **.scss",
     "e2e:prepare": "playwright install",
     "e2e": "playwright test",
     "e2e:update": "yarn e2e --update-snapshots",
-    "package": "run-s build:lib:prod copy-files build:css",
-    "prepublish:lib": "run-s ci package",
-    "publish:lib": "npm publish ./dist/ngx-datatable",
-    "prepack": "npm run package",
-    "pack": "npm pack ./dist/ngx-datatable/",
-    "publish": "run-s publish:lib deploy-docs",
-    "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1"
+    "package": "npm run build:lib:prod && npm run copy-files && npm run build:css"
   },
   "private": true,
   "dependencies": {
@@ -87,7 +81,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "ng-packagr": "^19.2.2",
-    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "sass": "^1.89.2",
     "semantic-release": "^24.2.6",
