test: rewrite pager test using a harness

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     "strictInjectionParameters": true,
     "strictTemplates": true,
     "enableIvy": true
-  }
+  },
+  "exclude": ["testing/**/*.ts"]
 }
