--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -46,6 +46,12 @@ jobs:
       - name: Test
         run: npm run ci
 
+      - name: Build Stackblitz
+        working-directory: projects/stackblitz
+        run: |
+          npm ci
+          npm run build -- --configuration=production
+
       - name: Archive coverage results
         uses: actions/upload-artifact@v4
         if: success() || failure()
